--- a/LESS/navigation.less
+++ b/LESS/navigation.less
@@ -8,11 +8,12 @@
     .navigation-bar {
         display: flex;
         background-color: white;
+        border-radius: 10px;
         margin: 10px 2%;
     }
 
         .nav-logo {
-            border: 1px solid white;
+            border-radius: 8px;
         }
 
             .logo {
